# Matrices

./: .gitignore  .meson.build.swp  Matrix.hpp  README.md  main.cpp  meson.build  run-script.sh  run-tester.sh
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  demo
builddir/meson-info/: intro-buildsystem_files.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
src/matrix/: .Matrix.hpp.swp  Matrix.hpp  meson.build
test/: meson.build
test/matrix/: .main.cpp.swp  main.cpp  meson.build  test_Matrix.cpp
